get - add referee to match
